--- a/package.json
+++ b/package.json
@@ -19,17 +19,25 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@types/chart.js": "^2.9.27",
+    "angular-bootstrap-md": "^10.0.0",
+    "animate.css": "^4.1.1",
+    "bootstrap3": "^3.3.5",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.7",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~10.0.7",
     "@angular/compiler-cli": "~10.0.11",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
